# vrasseo

./: .gitignore  .gitmodules
modules/: .gitignore  CMakeLists.txt  build_debug.sh  build_debug_opencv3.sh  build_release.sh  init.sql
modules/src/: CMakeLists.txt  DetectionModule.cpp  DetectionModule.h  ProgressUpdater.cpp  ProgressUpdater.h
modules/src/activity/: ActivityDefs.h  ActivityDetection.cpp  ActivityDetection.h  CMakeLists.txt  EventDetectionImpl.cpp  EventDetectionImpl.h  VtOutputHandler.cpp  VtOutputHandler.h  VtVideoAdapter.cpp  VtVideoAdapter.h
modules/src/activity/SummarizationFramework/: CommonTypes.h  Core.h  Exceptions.h
modules/src/activity/SummarizationFramework/Helpers/: Geometry.h  Strings.h
modules/src/activity/SummarizationFramework/Helpers/ScenarioIndexing/: IScenarioIndexer.h  SimpleScenarioIndexer.h
modules/src/activity/SummarizationFramework/ImageProcessing/: seamless_cloning.hpp
modules/src/activity/SummarizationFramework/ImageProcessing/FrameFilters/: FrameBlender.h  FrameFilter.h  FullFrameBlender.h  GaussianBlurFrameBlender.h  SeamlessFrameBlender.h  SimpleFrameBlender.h
modules/src/activity/SummarizationFramework/ImageProcessing/TubesExtraction/: CollectionOutputHandler.h  IOutputHandler.h  ITubesExtractor.h  MogTubesExtractor.h
modules/src/activity/SummarizationFramework/ImageProcessing/VideoFilters/: IntervalVideoFilter.h  MedianVideoFilter.h  MogBackgroundExtractorVideoFilter.h  ResamplingVideoFilter.h  TimelapseVideoFilter.h
modules/src/activity/SummarizationFramework/Model/: BufferedVideoSource.h  IVideoSource.h  NullVideoSequence.h  Scenario.h  Tube.h  TubeCollection.h  TubeFrame.h  TubeFrameData.h  VideoSequence.h
modules/src/activity/SummarizationFramework/Optimization/BackgroundSolver/: IBackgroundSolver.h  LinearMogBackgroundSolver.h
modules/src/activity/SummarizationFramework/Optimization/ScenarioSolver/: BaseSynopsisScenarioSolver.h  FixedLengthSynopsisScenarioSolver.h  IScenarioSolver.h  RandomSynopsisScenarioSolver.h  StaticScenarioSolver.h
modules/src/activity/SummarizationFramework/Persistence/: IDataSource.h  IPersistable.h  MatrixCsvDataSource.h  PreloadedDataSource.h
modules/src/activity/SummarizationFramework/Persistence/FileDataSource/: BaseFileDataSource.h  Core.h  TubeCollectionFileDataSource.h  TubeFileDataSource.h  TubeFrameDataFileDataSource.h  TubeFrameFileDataSource.h
modules/src/activity/SummarizationFramework/Persistence/V100DataSource/: Core.h  FileBasedDataSource.h  PathParams.h  TubeCollectionDataSource.h  TubeDataSource.h  TubeFrameDataDataSource.h  TubeFrameDataSource.h  TubesExtractionOutputHandler.h  XmlBasedDataSource.h
modules/src/activity/SummarizationFramework/Presentation/: FrameWindow.h  IRenderer.h  MatrixPlotter.h  StaticRenderer.h  SynopsisRenderer.h  TubesPlayer.h
modules/src/activity/SummarizationFramework/TubeFeatures/Features/: EmptyFeature.h  GradientFeature.h  HistogramAggregator.h  ITubeFeature.h  ITubeFeatureExtractor.h  RandomFeature.h  SimpleSubtractionFeature.h
modules/src/activity/SummarizationFramework/TubeFeatures/Processors/: IProcessor.h  TubeProcessor.h  VideoSequenceProcessor.h
modules/src/activity/SummarizationFramework/TubeFeatures/Segmentation/: CoverageDrivenLmFeatureSegmentator.h  FixedLengthIntervalLmFeatureSegmentator.h  ITubeFeatureSegmentator.h  LmFeatureSegmentator.h
modules/src/interfaces/: IDetectionModule.h  IProgressUpdater.h
test/: test_actdet.py
